--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,3 +131,12 @@ code {
   background-color: rgb(var(--mui-palette-info-mainChannel) / 0.08);
   border: 0;
 }
+
+span.swiper-pagination-bullet {
+  background: #fff !important;
+}
+.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-inline-start: 5px;
+}
